# catalyst

./: Cargo.toml  README.md
src/: lib.rs  main.rs  styles.rs
src/commands/: mod.rs
src/commands/collections/: args.rs
src/commands/endpoints/: args.rs
src/commands/run/: args.rs
src/storage/: collections.rs  endpoints.rs  mod.rs  utils.rs
src/utils/: id.rs
