[package]
name = "catalyst"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = "1.0.8"
clap = { version = "4.5.18", features = ["derive"] }

directories = "5.0.1"
json_to_table = "0.8.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tabled = { version = "0.16", features = ["std"], default-features = false }
url = "2.5.2"



